--- a/views/delete_contacts.html.twig
+++ b/views/delete_contacts.html.twig
@@ -1,9 +1,12 @@
 <html>
 <head>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <title>Contacts</title>
 </head>
 <body>
-    <h1>Contacts cleared!</h1>
+  <div class="container">
+    <h1>Address book cleared!</h1>
     <p><a href='/'>Home</a></p>
+  </div>
 </body>
 </html>
