--- a/views/delete_contacts.html.twig
+++ b/views/delete_contacts.html.twig
@@ -6,7 +6,8 @@
 <body>
   <div class="container">
     <h1>Address book cleared!</h1>
-    <p><a href='/'>Home</a></p>
+    <br/>
+    <h4><a href='/'>Home</a></h4>
   </div>
 </body>
 </html>
